@@ -482,8 +482,16 @@ command to generate the output files.
     <glob pattern="*.cpio.gz"/>
   </mime-type>
   <mime-type type="application/x-csh">
+    <sub-class-of type="application/x-shellscript"/>
     <sub-class-of type="text/plain"/>
     <_comment>C shell script</_comment>
+    <magic>
+      <match type="string" value="/bin/tcsh" offset="1:16"/>
+      <match type="string" value="/bin/csh" offset="1:16"/>
+      <match type="string" value="#!/usr/bin/env csh" offset="0"/>
+      <match type="string" value="#!/usr/bin/env tcsh" offset="0"/>
+    </magic>
+    <glob pattern="*.csh"/>
   </mime-type>
   <mime-type type="application/x-dbase">
     <_comment>dBASE document</_comment>
@@ -1148,6 +1156,7 @@ command to generate the output files.
     </magic>
   </mime-type>
   <mime-type type="application/x-perl">
+    <sub-class-of type='application/x-executable'/>
     <sub-class-of type="text/plain"/>
     <_comment>Perl script</_comment>
     <magic priority="50">
@@ -1222,6 +1231,7 @@ command to generate the output files.
     <glob pattern="*.rpm"/>
   </mime-type>
   <mime-type type="application/x-ruby">
+    <sub-class-of type='application/x-executable'/>
     <sub-class-of type="text/plain"/>
     <_comment>Ruby script</_comment>
     <magic>
@@ -1266,25 +1276,18 @@ command to generate the output files.
     <sub-class-of type="text/plain"/>
     <_comment>shell script</_comment>
     <magic priority="50">
-      <match type="string" value="#!/bin/ksh" offset="0"/>
-      <match type="string" value="#!/usr/local/bin/ash" offset="0"/>
-      <match type="string" value="#!/usr/local/tcsh" offset="0"/>
       <match type="string" value="# This is a shell archive" offset="10"/>
       <match type="string" value="/bin/bash" offset="1:16"/>
       <match type="string" value="/bin/nawk" offset="1:16"/>
-      <match type="string" value="/bin/tcsh" offset="1:16"/>
-      <match type="string" value="/bin/csh" offset="1:16"/>
       <match type="string" value="/bin/zsh" offset="1:16"/>
       <match type="string" value="/bin/sh" offset="1:16"/>
+      <match type="string" value="/bin/ksh" offset="1:16"/>
       <match type="string" value="#!/usr/bin/env sh" offset="0"/>
       <match type="string" value="#!/usr/bin/env bash" offset="0"/>
-      <match type="string" value="#!/usr/bin/env csh" offset="0"/>
-      <match type="string" value="#!/usr/bin/env tcsh" offset="0"/>
       <match type="string" value="#!/usr/bin/env zsh" offset="0"/>
-
+      <match type="string" value="#!/usr/bin/env ksh" offset="0"/>
     </magic>
     <glob pattern="*.sh"/>
-    <glob pattern="*.csh"/>
   </mime-type>
   <mime-type type="application/x-shockwave-flash">
     <_comment>Shockwave Flash file</_comment>
@@ -2237,12 +2240,6 @@ command to generate the output files.
     <_comment>Java source code</_comment>
     <glob pattern="*.java"/>
   </mime-type>
-  <mime-type type="text/x-ksh">
-    <_comment>Korn shell script</_comment>
-    <magic priority="50">
-      <match type="string" value="/bin/ksh" offset="1:16"/>
-    </magic>
-  </mime-type>
   <mime-type type="text/x-ksysv-log">
     <magic priority="50">
       <match type="string" value="KDE System V Init Editor" offset="0"/>
@@ -2290,6 +2287,7 @@ command to generate the output files.
     <glob pattern="*.patch"/>
   </mime-type>
   <mime-type type="text/x-python">
+    <sub-class-of type='application/x-executable'/>
     <sub-class-of type="text/plain"/>
     <_comment>Python script</_comment>
     <magic priority="50">
