@@ -1,5 +1,11 @@
 2004-12-10  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml.in: Cleanup for "text executable" types
+	(shellscripts and other scripts). Patch from David Faure
+	(faure@kde.org), fixes #618.
+
+2004-12-10  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml.in: fix vCard and vCalendar mime types and glob
 	patterns
 
